--- a/package.json
+++ b/package.json
@@ -6,16 +6,11 @@
 		"name": "Stephen Braitsch",
 		"email": "stephen@braitsch.io"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/braitsch/braitsch.io.git"
-	},
 	"private": true,
 	"dependencies": {
 		"express": "3.0.6",
 		"stylus": "0.31.0",
-		"jade": "0.27.7",
-		"socket.io": "0.9.6"
+		"jade": "0.27.7"
 	},
 	"engines": {
 		"node": "0.8.14",
