--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"dependencies": {
 		"express": "3.0.6",
 		"stylus": "0.50.0",
-		"jade": "1.9.2",
+		"jade": "1.9.2"
 	},
 	"engines": {
 		"node": "0.10.29"
