--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "A cross platform Git client for designers built in Adobe Air",
 	"author": "Stephen Braitsch <stephen@braitsch.io>",
-	"website":{
+	"website": {
 		"url": "http://revisions.braitsch.io"
 	},
 	"repository": {
@@ -11,9 +11,9 @@
 		"url": "git@github.com:braitsch/revisions-site.git"
 	},
 	"dependencies": {
-		"express": "4.13.3",
-		"jade": "1.11.0",
-		"stylus": "0.52.4"
+		"express": "4.16.3",
+		"pug": "^2.0.3",
+		"stylus": "0.54.5"
 	},
 	"engines": {
 		"node": "4.2.1"
